--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_hooks: ^0.18.4
   meta: ^1.7.0
   provider: ^6.0.3
+  bloc_test: ^9.0.3
 
 dev_dependencies:
   flutter_test:
